Changes for 1.8.4rc1

 - [ZBX-2902] fixed system.cpu.load[] and system.cpu.util[] being slightly exaggerated on Windows (asaveljevs)
 - [ZBX-2954] fixed translations in template delete popups (Vedmak)
 - [ZBX-2938] fixed not showing problems on map for hosts in maintenance (Vedmak)
 - [ZBXNEXT-238] made zabbix_sender gather as much data as possible before sending (asaveljevs)
 - [ZBX-2948] fixed export of trigger dependencies (Vedmak)
 - [ZBX-2949] fixed Templates screen Go action 'Delete' (Vedmak)
 - [ZBX-2934] added new conf. constants for roundoff configuration (Vedmak)
 - [ZBX-2907] fixed errors when action condition has trigger from another node (Vedmak)
 - [ZBX-2928] fixed "triggers info" unknown counter, added not classified triggers count (Vedmak)
 - [ZBX-2914] Gentoo initscript cleanup (Richlv)
 - [ZBX-2914] fixed incorrect references in Fedora initscripts (Richlv)
 - [ZBX-2925] empty values for translations won't be written to resulting file (Vedmak)
 - [ZBX-2933] fixed js error in IE when Print button pressed (Vedmak)
 - [ZBX-2937] fixed missing style files for IE (Vedmak)
 - [ZBX-2864] fixed print button creating multiple sid url parameters (Vedmak)
 - [ZBX-2899] fixed slideshow delays broken after upgrade from 1.8.2 (Vedmak)
 - [ZBX-2923] fixed triggers that depend on problem trigger are shown as problem on map (Vedmak)
 - [ZBX-2683] minor updates for the Latvian translation (Richlv)
 - [ZBX-2916] fixed duplicate parent map links in monitoring maps (Vedmak)
 - [ZBX-2905] fixed single trigger name expanding, unknown problem count and duplicate elements count in network maps (Vedmak)
 - [ZBX-2914] unified pidfile path in example Debian initscripts with example config files (Richlv)
 - [ZBX-886] removed duplicate locale string S_ACTIONS_BIG (Richlv)
 - [ZBX-633] fixed server crash on disconnected IPMI devices (asaveljevs)
 - [ZBX-2904] fixed some unknown triggers not shown in status of triggers screen (Vedmak)