@@ -20,7 +20,6 @@ Server=127.0.0.1
 # Default:
 # Timeout=3
 
-
 ####### USER-DEFINED MONITORED PARAMETERS #######
 
 ### Option: UnsafeUserParameters
