@@ -72,7 +72,6 @@ LogFile=/tmp/zabbix_agentd.log
 ### Option: Server
 #	List of comma delimited IP addresses (or hostnames) of Zabbix servers.
 #	No spaces allowed. First entry is used for receiving list of and sending active checks.
-#	Note that hostnames must resolve hostname->IP address and IP address->hostname.
 #	If IPv6 support is enabled then '127.0.0.1', '::127.0.0.1', '::ffff:127.0.0.1' are treated equally.
 #
 # Mandatory: yes
@@ -84,9 +83,10 @@ Server=127.0.0.1
 ### Option: Hostname
 #	Unique, case sensitive hostname.
 #	Required for active checks and must match hostname as configured on the server.
+#	System hostname is used if undefined.
 #
 # Default:
-# Hostname=system.uname
+# Hostname=system.hostname
 
 Hostname=Zabbix server
 
@@ -104,8 +104,6 @@ Hostname=Zabbix server
 # Mandatory: no
 # Default:
 # ListenIP=0.0.0.0
-
-# ListenIP=127.0.0.1
 
 ### Option: DisablePassive
 #	Disable passive checks. The agent will not listen on any TCP port.
@@ -125,8 +123,6 @@ Hostname=Zabbix server
 # Mandatory: no
 # Default:
 # DisableActive=0
-
-# DisableActive=1
 
 ### Option: ServerPort
 #	Server port for retrieving list of and  sending active checks.
@@ -171,7 +167,6 @@ Hostname=Zabbix server
 # Default:
 # MaxLinesPerSecond=100
 
-
 ############ ADVANCED PARAMETERS #################
 
 ### Option: StartAgents
@@ -199,7 +194,6 @@ Hostname=Zabbix server
 
 # Include=/etc/zabbix/zabbix_agent.userparams.conf
 # Include=/etc/zabbix/zabbix_agentd/
-
 
 ####### USER-DEFINED MONITORED PARAMETERS #######
 
