@@ -24,7 +24,7 @@
 # Default:
 # LogFile=
 
-LogFile=c:/zabbix_agentd.log
+LogFile=c:\zabbix_agentd.log
 
 ### Option: LogFileSize
 #	Maximum size of log file in MB.
@@ -56,7 +56,6 @@ LogFile=c:/zabbix_agentd.log
 ### Option: Server
 #	List of comma delimited IP addresses (or hostnames) of Zabbix servers.
 #	No spaces allowed. First entry is used for receiving list of and sending active checks.
-#	Note that hostnames must resolve hostname->IP address and IP address->hostname.
 #	If IPv6 support is enabled then '127.0.0.1', '::127.0.0.1', '::ffff:127.0.0.1' are treated equally.
 #
 # Mandatory: yes
@@ -68,11 +67,12 @@ Server=127.0.0.1
 ### Option: Hostname
 #	Unique, case sensitive hostname.
 #	Required for active checks and must match hostname as configured on the server.
+#	System hostname is used if undefined.
 #
 # Default:
-# Hostname=system.uname
+# Hostname=system.hostname
 
-Hostname=Windows Host
+Hostname=Windows host
 
 ### Option: ListenPort
 #	Agent will listen on this port for connections from the server.
@@ -88,8 +88,6 @@ Hostname=Windows Host
 # Mandatory: no
 # Default:
 # ListenIP=0.0.0.0
-
-# ListenIP=127.0.0.1
 
 ### Option: DisablePassive
 #	Disable passive checks. The agent will not listen on any TCP port.
@@ -109,8 +107,6 @@ Hostname=Windows Host
 # Mandatory: no
 # Default:
 # DisableActive=0
-
-# DisableActive=1
 
 ### Option: ServerPort
 #	Server port for retrieving list of and  sending active checks.
