@@ -39,9 +39,7 @@ Server=127.0.0.1
 #
 # Mandatory: no
 # Default:
-# Hostname=
-
-# Hostname=proxy_name
+# Hostname=system.hostname
 
 ### Option: ListenPort
 #	Listen port for trapper.
@@ -252,8 +250,6 @@ DBUser=root
 # Default:
 # ListenIP=0.0.0.0
 
-# ListenIP=127.0.0.1
-
 ### Option: HousekeepingFrequency
 #	How often Zabbix will perform housekeeping procedure (in hours).
 #	Housekeeping is removing unnecessary information from history, alert, and alarms tables.
@@ -339,8 +335,6 @@ DBUser=root
 # Default:
 # TrapperTimeout=300
 
-# TrapperTimeout=5
-
 ### Option: UnreachablePeriod
 #	After how many seconds of unreachability treat a host as unavailable.
 #
@@ -410,5 +404,5 @@ DBUser=root
 # Default:
 # Include=
 
-# Include=/etc/zabbix/zabbix_server.general.conf
-# Include=/etc/zabbix/zabbix_server/
+# Include=/etc/zabbix/zabbix_proxy.general.conf
+# Include=/etc/zabbix/zabbix_proxy/
