@@ -301,8 +301,6 @@ DBUser=root
 # Default:
 # TrapperTimeout=300
 
-# TrapperTimeout=5
-
 ### Option: UnreachablePeriod
 #	After how many seconds of unreachability treat a host as unavailable.
 #
